syntax = "proto3";

package io.evitadb.externalApi.grpc.generated;
option java_multiple_files = true;
option csharp_namespace = "EvitaDB";

import "GrpcEnums.proto";
import "google/protobuf/wrappers.proto";
import "GrpcEvitaDataTypes.proto";

message GrpcSetPriceInnerRecordHandlingMutation {
  GrpcPriceInnerRecordHandling priceInnerRecordHandling = 1;
}

message GrpcUpsertPriceMutation {
  int32 priceId = 1;
  string priceList = 2;
  GrpcCurrency currency = 3;
  google.protobuf.Int32Value innerRecordId = 4;
  GrpcBigDecimal priceWithoutTax = 5;
  GrpcBigDecimal taxRate = 6;
  GrpcBigDecimal priceWithTax = 7;
  GrpcDateTimeRange validity = 8;
  bool sellable = 9;
}

message GrpcRemovePriceMutation {
  int32 priceId = 1;
  string priceList = 2;
  GrpcCurrency currency = 3;
}